--- a/serial/makefile
+++ b/serial/makefile
@@ -1,6 +1,6 @@
 all : clean serial
 
 serial : serial.cpp
-	g++ -lpthread serial.cpp -o serial.out
+	g++ -lpthread serial.cpp -o ImageFilters.out
 clean : 
 	rm -f *.out *output*.bmp
