--- a/parallel/makefile
+++ b/parallel/makefile
@@ -1,6 +1,6 @@
 all : clean parallel
 
 parallel : parallel.cpp
-	g++ -lpthread parallel.cpp -o parallel.out
+	g++ -std=c++11  parallel.cpp -o ImageFilters.out
 clean : 
 	rm -f *.out *output*.bmp
