--- a/serial/.vscode/settings.json
+++ b/serial/.vscode/settings.json
@@ -1,12 +1,5 @@
 {
     "files.associations": {
-        "array": "cpp",
-        "string": "cpp",
-        "string_view": "cpp",
-        "iostream": "cpp",
-        "algorithm": "cpp",
-        "initializer_list": "cpp",
-        "vector": "cpp",
-        "ostream": "cpp"
+        "chrono": "cpp"
     }
 }
